<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyMentorApp-unofficial-</string>
    <string name="title_section1">總覽</string>
    <string name="title_section2">基本知能</string>
    <string name="title_section3">必修通識</string>
    <string name="title_section4">延伸通識</string>
    <string name="title_section5">系上必修</string>
    <string name="title_section6">系上選修</string>
    <string name="mentor">
        非校方 App。(只是當初剛學為了讓自己偷懶寫的東西:p)\n
        若登入後沒有資料，可能是密碼錯誤或是網頁有問題。\n\n
        有興趣協助開發請至 :
    </string>
    <string name="git"> https://github.com/freedomtomdestiny/MyMentorApp-unofficial-</string>
    <string name="sourceNotice">同時，下載非上述連結提供之App造成資料外洩請自行負責。\n</string>
    <string name="LICENSE">
        本專案採 GPL3.0 LICENSE 開源。\n
        GPL3.0 重點為：\n
        1. 以此程式延伸之程式必須同樣為 GPL3.0 LICENSE\n
        2. 以此程式延伸之程式必須開源\n
        3. 以此程式延伸之程式必須附上源碼連結\n
        4. 以此程式延伸之程式必須免費\n
        其餘 GPL3.0 版權詳細內容請見源碼 LICENSE 頁面
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">登入帳號</string>
    <string name="action_settings">課程大綱連結</string>
    <string name="coursewiki">選課大全連結</string>
    <string name="fanpage">粉絲專業連結</string>

</resources>
