<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mediaproject_v3.MainActivity" >

    <item
        android:id="@+id/action_example"
        android:title="@string/action_example"
        app:showAsAction="withText|ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/coursewiki"
        android:orderInCategory="100"
        android:title="@string/coursewiki"
        app:showAsAction="never"/>
    <item
        android:id="@+id/fanpage"
        android:orderInCategory="100"
        android:title="@string/fanpage"
        app:showAsAction="never"/>

</menu>
