<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    android:gravity="center_horizontal"
        android:text="帳號："
    />
    <EditText android:id="@+id/id0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="e.g. 10127209" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    android:gravity="center_horizontal"
        android:text="密碼："
    />
    <EditText android:id="@+id/passwd0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="textPassword"
        android:hint="********" />

    <CheckBox
        android:id="@+id/ios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="我是iOS用戶我想順便許願" />

    <Button
        android:id="@+id/btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="登入" />
    
    <TextView android:id="@+id/text0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/mentor"
        android:autoLink="web|email"
    />

    <TextView android:id="@+id/git"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/git"
        android:autoLink="web|email"
        />

    <TextView android:id="@+id/sourceNotice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/sourceNotice"
        android:autoLink="web|email"
        />

    <TextView android:id="@+id/LICENSE"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/LICENSE"
        android:autoLink="web|email"
        />
    
    

    
</LinearLayout>
